--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,25 @@
 h1, h3 {
   text-align: center;
-  color: blueviolet;
+  color: rgb(128, 44, 44);
   margin: 50px;
 }
 
 #buttons {
-  width: 50%;
-  height: auto;
+  width: 60%;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .btn {
-  width: 100px;
-  height: 100px;
+  width: 30%;
+  height: 100px; 
 }
 
 .far {
-  width: 10px;
-  height: 10px;
+  font-size: 2em;
+  color: black;
 }
