--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,17 @@ h1, h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+}
+
+#stats {
+  border: 2px solid red;
+  height: 10vh;
+  width: auto;
+}
+
+#results {
+  padding: 20px;
 }
 
 .btn {
